[tool.poetry]
name = "gardener"
version = "0.1.0"
description = "A cli tool to manage your digital garden"
authors = ["Bharat Kalluri <bharatkalluri@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.1.2"
colorama = "^0.4.3"

[tool.poetry.dev-dependencies]
pylint = "^2.5.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
